--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -75,14 +75,14 @@ jobs:
       
     steps:
       - uses: actions/checkout@v2
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         with:
           fetch-depth: 0
           submodules: true
       - name: set version string for artifacts
         shell: bash
         id: set-version
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         run: |
           if [[ "$GITHUB_REF" == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
@@ -98,11 +98,11 @@ jobs:
           echo "::set-output name=name::$NAME"
       - name: setup python
         uses: actions/setup-python@v2
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         with:
           python-version: '3.x'
       - name: install dependencies for macOS
-        if: runner.os == 'macOS' && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'macOS' && env.SHOULD_RUN
         env:
           HOMEBREW_NO_ANALYTICS: 1
           HOMEBREW_NO_AUTO_UPDATE: 1
@@ -128,7 +128,7 @@ jobs:
             brew install meson help2man
           fi
       - name: install dependencies for Windows
-        if: runner.os == 'Windows' && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'Windows' && env.SHOULD_RUN
         shell: bash
         run: |
           choco install jack --version=1.9.17 --no-progress
@@ -151,27 +151,27 @@ jobs:
           fi
       - name: cache Qt
         id: cache-qt
-        if: matrix.qt-arch && !matrix.static-qt-version && ${{ env.SHOULD_RUN }}
+        if: matrix.qt-arch && !matrix.static-qt-version && env.SHOULD_RUN
         uses: actions/cache@v1
         with:
           path: ../Qt
           key: $${{ runner.os }}-QtCache-${{ env.QT_VERSION }}-${{ matrix.build-system }}
       - name: install Qt
         uses: jurplel/install-qt-action@v2
-        if: runner.os == 'Windows' && !matrix.static-qt-version && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'Windows' && !matrix.static-qt-version && env.SHOULD_RUN
         with:
           version: ${{ env.QT_VERSION }}
           arch: ${{ matrix.qt-arch }}
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: cache static Qt
         id: cache-static-qt
-        if: matrix.static-qt-version && ${{ env.SHOULD_RUN }}
+        if: matrix.static-qt-version && env.SHOULD_RUN
         uses: actions/cache@v1
         with:
           path: ${{ env.QT_STATIC_BUILD_PATH }}
           key: ${{ runner.os }}-QtStaticCache-${{ matrix.static-qt-version }}_${{ matrix.qt-static-cache-key }}
       - name: download Qt sources
-        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && ${{ env.SHOULD_RUN }}
+        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && env.SHOULD_RUN
         shell: bash
         run: |
           QT_FULL_VERSION=${{ matrix.static-qt-version }}
@@ -184,7 +184,7 @@ jobs:
           # move qt to a known location
           mv qt-everywhere* $QT_SRC_PATH
       - name: build static Qt on Linux / macOS
-        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os != 'Windows' && ${{ env.SHOULD_RUN }}
+        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os != 'Windows' && env.SHOULD_RUN
         run: |
           mkdir $QT_STATIC_BUILD_PATH
           # configure
@@ -201,7 +201,7 @@ jobs:
           echo "installing Qt"
           make install
       - name: build static Qt on Windows
-        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os == 'Windows' && ${{ env.SHOULD_RUN }}
+        if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os == 'Windows' && env.SHOULD_RUN
         shell: cmd
         run: |
           mkdir %QT_STATIC_BUILD_PATH%
@@ -214,7 +214,7 @@ jobs:
           VCPKG_TRIPLET: ${{ matrix.vcpkg-triplet }}
       - name: set Qt environment variables # needed to find qmake depending on the way qt was installed
         shell: bash
-        if: matrix.build-system == 'qmake' && ${{ env.SHOULD_RUN }}
+        if: matrix.build-system == 'qmake' && env.SHOULD_RUN
         run: |
           if [[ -n "${{ matrix.static-qt-version }}" ]]; then 
             echo "$QT_STATIC_BUILD_PATH/bin" >> $GITHUB_PATH
@@ -224,7 +224,7 @@ jobs:
             echo "$Qt5_DIR/bin" >> $GITHUB_PATH
           fi
       - name: build JackTrip with QMake
-        if: matrix.build-system == 'qmake' && ${{ env.SHOULD_RUN }}
+        if: matrix.build-system == 'qmake' && env.SHOULD_RUN
         shell: bash
         run: |
           CONFIG_STRING="noclean"
@@ -251,7 +251,7 @@ jobs:
           ./build $CONFIG_STRING
       - name: compress the binary
         shell: bash
-        if: matrix.binary-path && ${{ env.SHOULD_RUN }}
+        if: matrix.binary-path && env.SHOULD_RUN
         run: |
           mkdir -p $BUILD_PATH/${{ matrix.binary-path }}
           if [[ "${{ runner.os }}" == "Windows" ]]; then
@@ -262,7 +262,7 @@ jobs:
             zip -r $BUILD_PATH/${{ matrix.binary-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-binary.zip LICENSE.md LICENSES
           fi
       - name: create app bundle and installer on macOS
-        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && env.SHOULD_RUN
         run: |
           CONFIG=
           if [[ -n "${{ matrix.installer-path }}" ]]; then 
@@ -283,7 +283,7 @@ jobs:
             cp -R package/build/*.pkg $BUILD_PATH/${{ matrix.installer-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer.pkg
           fi
       - name: create installer on Windows
-        if: runner.os == 'Windows' && matrix.installer-path && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'Windows' && matrix.installer-path && env.SHOULD_RUN
         shell: cmd
         run: |
           cd win
@@ -292,37 +292,37 @@ jobs:
           bash -c "cp deploy/*.msi $BUILD_PATH/${{ matrix.installer-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer.msi"
       - name: upload jacktrip binary
         uses: actions/upload-artifact@v2
-        if: matrix.binary-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: matrix.binary-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-binary
           path: ${{ env.BUILD_PATH }}/${{ matrix.binary-path }}
       - name: upload application bundle
         uses: actions/upload-artifact@v2
-        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-application
           path: ${{ env.BUILD_PATH }}/${{ matrix.bundle-path }}
       - name: upload installer
         uses: actions/upload-artifact@v2
-        if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
       - name: analyze build
-        if: github.event_name == 'pull_request' && matrix.static-analysis == true && ${{ env.SHOULD_RUN }}
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
         shell: bash
         run: |
           mkdir $CLANG_TIDY_PATH
           git diff -U0 origin/${{ github.base_ref }} | clang-tidy-diff -p1 -path $BUILD_PATH -export-fixes $CLANG_TIDY_PATH/fixes.yml
       - name: save PR metadata for static analysis
-        if: github.event_name == 'pull_request' && matrix.static-analysis == true && ${{ env.SHOULD_RUN }}
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
         shell: bash
         run: |
           echo ${{ github.event.number }} > $CLANG_TIDY_PATH/pr-id.txt
           echo ${{ github.event.pull_request.head.repo.full_name }} > $CLANG_TIDY_PATH/pr-head-repo.txt
           echo ${{ github.event.pull_request.head.ref }} > $CLANG_TIDY_PATH/pr-head-ref.txt
       - name: upload static analysis
-        if: github.event_name == 'pull_request' && matrix.static-analysis == true && ${{ env.SHOULD_RUN }}
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.CLANG_TIDY_NAME }}
@@ -356,14 +356,14 @@ jobs:
       
     steps:
       - uses: actions/checkout@v2
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         with:
           fetch-depth: 0
           submodules: true
       - name: set version string for artifacts
         shell: bash
         id: set-version
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         run: |
           if [[ "$GITHUB_REF" == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
@@ -379,18 +379,18 @@ jobs:
           echo "::set-output name=name::$NAME"
       - name: Retrieve binary artifact
         uses: actions/download-artifact@v2
-        if: matrix.binary-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: matrix.binary-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-binary
           path: ${{ env.BUILD_PATH }}/${{ matrix.binary-path }}
       - name: Retrieve Windows installer artifact
         uses: actions/download-artifact@v2
-        if: runner.os == 'Linux' && matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'Linux' && matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
       - name: install dependencies for macOS
-        if: runner.os == 'macOS' && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'macOS' && env.SHOULD_RUN
         env:
           HOMEBREW_NO_ANALYTICS: 1
           HOMEBREW_NO_AUTO_UPDATE: 1
@@ -400,7 +400,7 @@ jobs:
           brew link qt5 --force
           brew install packages
       - name: set signing secrets for macOS
-        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && env.SHOULD_RUN
         env:
           APP_SIGNING_CERT_BASE64: ${{ secrets.APP_SIGNING_CERT_BASE64}}
           INSTALLER_SIGNING_CERT_BASE64: ${{ secrets.INSTALLER_SIGNING_CERT_BASE64 }}
@@ -427,7 +427,7 @@ jobs:
           security import $INSTALLER_CERT_PATH -P "$CERT_PASSPHRASE" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
       - name: sign and notarize bundle and installer on macOS
-        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && env.SHOULD_RUN
         env:
           CERTIFICATE: ${{ secrets.APP_CERT_NAME }}
           PACKAGE_CERT: ${{ secrets.INSTALLER_CERT_NAME }}
@@ -458,7 +458,7 @@ jobs:
             cp -R package/build/*.pkg $BUILD_PATH/${{ matrix.installer-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-signed-installer.pkg
           fi      
       - name: sign artifacts on Windows
-        if: runner.os == 'Linux' && matrix.installer-path && ${{ env.SHOULD_RUN }}
+        if: runner.os == 'Linux' && matrix.installer-path && env.SHOULD_RUN
         env:
           TOTP: ${{ secrets.TOTP_SECRET }}
           CRED_ID: ${{ secrets.ESIGNER_CREDENTIAL_ID }}
@@ -474,31 +474,31 @@ jobs:
           rm $BUILD_PATH/${{ matrix.installer-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer.msi
       - name: upload application bundle
         uses: actions/upload-artifact@v2
-        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-signed-application
           path: ${{ env.BUILD_PATH }}/${{ matrix.bundle-path }}
       - name: upload installer
         uses: actions/upload-artifact@v2
-        if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && ${{ env.SHOULD_RUN }}
+        if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-signed-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
       - name: analyze build
-        if: github.event_name == 'pull_request' && matrix.static-analysis == true && ${{ env.SHOULD_RUN }}
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
         shell: bash
         run: |
           mkdir $CLANG_TIDY_PATH
           git diff -U0 origin/${{ github.base_ref }} | clang-tidy-diff -p1 -path $BUILD_PATH -export-fixes $CLANG_TIDY_PATH/fixes.yml
       - name: save PR metadata for static analysis
-        if: github.event_name == 'pull_request' && matrix.static-analysis == true && ${{ env.SHOULD_RUN }}
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
         shell: bash
         run: |
           echo ${{ github.event.number }} > $CLANG_TIDY_PATH/pr-id.txt
           echo ${{ github.event.pull_request.head.repo.full_name }} > $CLANG_TIDY_PATH/pr-head-repo.txt
           echo ${{ github.event.pull_request.head.ref }} > $CLANG_TIDY_PATH/pr-head-ref.txt
       - name: upload static analysis
-        if: github.event_name == 'pull_request' && matrix.static-analysis == true && ${{ env.SHOULD_RUN }}
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.CLANG_TIDY_NAME }}
@@ -515,12 +515,12 @@ jobs:
     steps:
       - name: download artifacts
         uses: actions/download-artifact@v2
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         with:
           path: ${{ env.DOWNLOAD_PATH }} # no "name" paramter - download all artifacts
       - name: upload to the release page
         uses: softprops/action-gh-release@v1
-        if: ${{ env.SHOULD_RUN }}
+        if: env.SHOULD_RUN
         with:
           files: |
             ${{ env.DOWNLOAD_PATH }}/JackTrip*/*
