--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -71,7 +71,6 @@ jobs:
       QT_STATIC_OPTIONS: '-static -release -optimize-size -no-pch -nomake tools -nomake tests -nomake examples -opensource -confirm-license -skip webengine -skip qt3d -skip qtactiveqt -skip qtandroidextras -skip qtcharts -skip qtdatavis3d -skip qtdoc -skip qtgamepad -skip qtimageformats -skip qtlocation -skip qtmultimedia -skip qtpurchasing -skip qtpurchasing -skip qtremoteobjects -skip qtscript -skip qtsensors -skip qtserialbus -skip qtserialport -skip qtspeech -skip qttools -skip qtvirtualkeyboard -skip qtwebchannel -skip qtwebengine -skip qtwebglplugin -skip qtwebsockets -skip qtwebview -skip qtxmlpatterns' # common for all platforms
       CLANG_TIDY_NAME: clang-tidy-result
       CLANG_TIDY_PATH: ${{ github.workspace }}/clang-tidy-result
-      SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       
     steps:
       - uses: actions/checkout@v2
@@ -79,9 +78,13 @@ jobs:
         with:
           fetch-depth: 0
           submodules: true
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: set version string for artifacts
         shell: bash
         id: set-version
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         if: env.SHOULD_RUN
         run: |
           if [[ "$GITHUB_REF" == refs/tags/* ]]; then
@@ -101,12 +104,15 @@ jobs:
         if: env.SHOULD_RUN
         with:
           python-version: '3.x'
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: install dependencies for macOS
         if: runner.os == 'macOS' && env.SHOULD_RUN
         env:
           HOMEBREW_NO_ANALYTICS: 1
           HOMEBREW_NO_AUTO_UPDATE: 1
           HOMEBREW_NO_INSTALL_CLEANUP: 1
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           # brew install jack
           # instead of using homebrew, install jack 1.9.16 from the installer, which should provide compatibility with both jackosx and the newer jack2
@@ -129,6 +135,8 @@ jobs:
           fi
       - name: install dependencies for Windows
         if: runner.os == 'Windows' && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           choco install jack --version=1.9.17 --no-progress
@@ -156,6 +164,8 @@ jobs:
         with:
           path: ../Qt
           key: $${{ runner.os }}-QtCache-${{ env.QT_VERSION }}-${{ matrix.build-system }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: install Qt
         uses: jurplel/install-qt-action@v2
         if: runner.os == 'Windows' && !matrix.static-qt-version && env.SHOULD_RUN
@@ -163,6 +173,8 @@ jobs:
           version: ${{ env.QT_VERSION }}
           arch: ${{ matrix.qt-arch }}
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: cache static Qt
         id: cache-static-qt
         if: matrix.static-qt-version && env.SHOULD_RUN
@@ -170,8 +182,12 @@ jobs:
         with:
           path: ${{ env.QT_STATIC_BUILD_PATH }}
           key: ${{ runner.os }}-QtStaticCache-${{ matrix.static-qt-version }}_${{ matrix.qt-static-cache-key }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: download Qt sources
         if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           QT_FULL_VERSION=${{ matrix.static-qt-version }}
@@ -185,6 +201,8 @@ jobs:
           mv qt-everywhere* $QT_SRC_PATH
       - name: build static Qt on Linux / macOS
         if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true' && runner.os != 'Windows' && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           mkdir $QT_STATIC_BUILD_PATH
           # configure
@@ -212,7 +230,10 @@ jobs:
           mingw32-make install
         env:
           VCPKG_TRIPLET: ${{ matrix.vcpkg-triplet }}
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: set Qt environment variables # needed to find qmake depending on the way qt was installed
+        env:
+            SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         if: matrix.build-system == 'qmake' && env.SHOULD_RUN
         run: |
@@ -225,6 +246,8 @@ jobs:
           fi
       - name: build JackTrip with QMake
         if: matrix.build-system == 'qmake' && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           CONFIG_STRING="noclean"
@@ -252,6 +275,8 @@ jobs:
       - name: compress the binary
         shell: bash
         if: matrix.binary-path && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           mkdir -p $BUILD_PATH/${{ matrix.binary-path }}
           if [[ "${{ runner.os }}" == "Windows" ]]; then
@@ -263,6 +288,8 @@ jobs:
           fi
       - name: create app bundle and installer on macOS
         if: runner.os == 'macOS' && (matrix.bundle-path || matrix.installer-path) && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           CONFIG=
           if [[ -n "${{ matrix.installer-path }}" ]]; then 
@@ -284,6 +311,8 @@ jobs:
           fi
       - name: create installer on Windows
         if: runner.os == 'Windows' && matrix.installer-path && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: cmd
         run: |
           cd win
@@ -296,26 +325,36 @@ jobs:
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-binary
           path: ${{ env.BUILD_PATH }}/${{ matrix.binary-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: upload application bundle
         uses: actions/upload-artifact@v2
         if: matrix.bundle-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-application
           path: ${{ env.BUILD_PATH }}/${{ matrix.bundle-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: upload installer
         uses: actions/upload-artifact@v2
         if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: analyze build
         if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           mkdir $CLANG_TIDY_PATH
           git diff -U0 origin/${{ github.base_ref }} | clang-tidy-diff -p1 -path $BUILD_PATH -export-fixes $CLANG_TIDY_PATH/fixes.yml
       - name: save PR metadata for static analysis
         if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           echo ${{ github.event.number }} > $CLANG_TIDY_PATH/pr-id.txt
@@ -323,6 +362,8 @@ jobs:
           echo ${{ github.event.pull_request.head.ref }} > $CLANG_TIDY_PATH/pr-head-ref.txt
       - name: upload static analysis
         if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.CLANG_TIDY_NAME }}
@@ -352,7 +393,6 @@ jobs:
 
     env:
       BUILD_PATH: ${{ github.workspace }}/builddir
-      SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       
     steps:
       - uses: actions/checkout@v2
@@ -360,6 +400,8 @@ jobs:
         with:
           fetch-depth: 0
           submodules: true
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: set version string for artifacts
         shell: bash
         id: set-version
@@ -377,24 +419,31 @@ jobs:
           fi
           echo "::set-output name=version::$VERSION"
           echo "::set-output name=name::$NAME"
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: Retrieve binary artifact
         uses: actions/download-artifact@v2
         if: matrix.binary-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-binary
           path: ${{ env.BUILD_PATH }}/${{ matrix.binary-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: Retrieve Windows installer artifact
         uses: actions/download-artifact@v2
         if: runner.os == 'Linux' && matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: install dependencies for macOS
         if: runner.os == 'macOS' && env.SHOULD_RUN
         env:
           HOMEBREW_NO_ANALYTICS: 1
           HOMEBREW_NO_AUTO_UPDATE: 1
           HOMEBREW_NO_INSTALL_CLEANUP: 1
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           brew install qt5
           brew link qt5 --force
@@ -406,6 +455,7 @@ jobs:
           INSTALLER_SIGNING_CERT_BASE64: ${{ secrets.INSTALLER_SIGNING_CERT_BASE64 }}
           CERT_PASSPHRASE: ${{ secrets.CERT_PASSPHRASE }}
           KEYCHAIN_PWD: ${{ secrets.KEYCHAIN_PWD }}
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           # create variables
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
@@ -433,6 +483,7 @@ jobs:
           PACKAGE_CERT: ${{ secrets.INSTALLER_CERT_NAME }}
           USERNAME: app@jacktrip.org
           PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PWD}}
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           # Copy jacktrip binary where assemple_app.sh looks for it
           cp ${{ env.BUILD_PATH }}/${{ matrix.binary-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-binary.zip ${{ env.BUILD_PATH }}/jacktrip.zip
@@ -464,6 +515,7 @@ jobs:
           CRED_ID: ${{ secrets.ESIGNER_CREDENTIAL_ID }}
           USERNAME: jacktrip
           PASSWORD: ${{ secrets.SSL_COM_PWD}}
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         run: |
           cd win/CodeSignTool
           curl -L -O -J https://storage.googleapis.com/files.jacktrip.org/binaries/CodeSignTool/CodeSignTool-jars.zip
@@ -478,20 +530,28 @@ jobs:
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-signed-application
           path: ${{ env.BUILD_PATH }}/${{ matrix.bundle-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: upload installer
         uses: actions/upload-artifact@v2
         if: matrix.installer-path && (!startsWith(github.ref, 'refs/tags/') || (startsWith(github.ref, 'refs/tags/') && matrix.release-name)) && env.SHOULD_RUN
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-signed-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: analyze build
         if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           mkdir $CLANG_TIDY_PATH
           git diff -U0 origin/${{ github.base_ref }} | clang-tidy-diff -p1 -path $BUILD_PATH -export-fixes $CLANG_TIDY_PATH/fixes.yml
       - name: save PR metadata for static analysis
         if: github.event_name == 'pull_request' && matrix.static-analysis == true && env.SHOULD_RUN
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
         shell: bash
         run: |
           echo ${{ github.event.number }} > $CLANG_TIDY_PATH/pr-id.txt
@@ -503,6 +563,8 @@ jobs:
         with:
           name: ${{ env.CLANG_TIDY_NAME }}
           path: ${{ env.CLANG_TIDY_PATH }}/
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
   # release - list of files uploaded to GH release is specified in the *upload* step
   deploy_gh:
     if: startsWith(github.ref, 'refs/tags/') # run on tagged commits
@@ -511,13 +573,14 @@ jobs:
     name: 'deploy release'
     env:
       DOWNLOAD_PATH: ${{ github.workspace }}/Install
-      SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
     steps:
       - name: download artifacts
         uses: actions/download-artifact@v2
         if: env.SHOULD_RUN
         with:
           path: ${{ env.DOWNLOAD_PATH }} # no "name" paramter - download all artifacts
+        env:
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
       - name: upload to the release page
         uses: softprops/action-gh-release@v1
         if: env.SHOULD_RUN
@@ -527,3 +590,4 @@ jobs:
           draft: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SHOULD_RUN: ${{ secrets.SHOULD_SIGN }} == true
