--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -342,7 +342,7 @@ jobs:
           mkdir $QT_STATIC_BUILD_PATH
           # configure
           if [[ "${{ runner.os }}" == "Linux" ]]; then
-            QT_STATIC_OPTIONS="-qt-zlib -qt-libpng -qt-libjpeg -system-freetype -fontconfig -qt-pcre -qt-harfbuzz -no-icu -opengl desktop $QT_STATIC_OPTIONS"
+            QT_STATIC_OPTIONS="-qt-zlib -qt-libpng -qt-libjpeg -system-freetype -fontconfig -qt-pcre -qt-harfbuzz -no-icu -opengl desktop -xcb -xcb-xlib -bundled-xcb-input $QT_STATIC_OPTIONS"
           fi
           "$QT_SRC_PATH/configure" -prefix "$QT_STATIC_BUILD_PATH" $QT_STATIC_OPTIONS
           echo "QT Configure command"
