--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -344,7 +344,7 @@ jobs:
           if [[ "${{ runner.os }}" == "Linux" ]]; then
             QT_STATIC_OPTIONS="-qt-zlib -qt-libpng -qt-libjpeg -system-freetype -fontconfig -qt-pcre -qt-harfbuzz -no-icu -opengl desktop $QT_STATIC_OPTIONS"
             if [[ "${{ matrix.nogui }}" == true ]]; then 
-              QT_STATIC_OPTIONS="-xcb -xcb-xlib -bundled-xcb-xinput -L/usr/lib/x86_64-linux-gnu $QT_STATIC_OPTIONS""
+              QT_STATIC_OPTIONS="-xcb -xcb-xlib -bundled-xcb-xinput -L/usr/lib/x86_64-linux-gnu $QT_STATIC_OPTIONS"
             fi
           fi
           "$QT_SRC_PATH/configure" -prefix "$QT_STATIC_BUILD_PATH" $QT_STATIC_OPTIONS
