Update CFBundleVersion with semantic version

--- a/macos/JackTrip.app_template/Contents/Info.plist
+++ b/macos/JackTrip.app_template/Contents/Info.plist
@@ -27,7 +27,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>16</string>
+	<string>%VERSION%</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
