--- a/build
+++ b/build
@@ -19,6 +19,7 @@ rtaudio - build with RtAudio\n
 no-system-rtaudio - use bundled RtAudio library even if it's available in the system\n
 nogui - build without the gui\n
 novs - build without Virtual Studio support\n
+noupdater - build without auto-update support\n
 static - build with static libraries\n
 weakjack - build with weak linking of jack libraries\n
 install - install jacktrip in system location (uses sudo)\n
@@ -44,6 +45,10 @@ while [[ "$#" -gt 0 ]]; do
       novs)
       echo "Building without Virtual Studio support"
       CONFIG="-config novs $CONFIG" 
+      ;;
+      noupdater)
+      echo "Building without auto-update support"
+      CONFIG="-config noupdater $CONFIG"
       ;;
       static)
       echo "Building with static libraries"
